# rust-cookbook

./: .gitignore  Cargo.toml  cats.db  output.txt
algorithms/: Cargo.toml
algorithms/src/: main.rs  random_values.rs  sort_vector.rs
ansi_terminal/: Cargo.toml
ansi_terminal/src/: main.rs
clap_basic/: Cargo.toml
clap_basic/src/: main.rs
concurrency/: Cargo.toml
concurrency/src/: explicit_threads.rs  main.rs  parallel_tasks.rs
dateandtime/: Cargo.toml
dateandtime/src/: main.rs
dbpostgres/: Cargo.toml
dbpostgres/src/: main.rs
encoding/: Cargo.toml
encoding/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs
filesystem/: Cargo.toml
science/: Cargo.toml
sqlite/: Cargo.toml
sqlite/src/: main.rs
systems/: Cargo.toml
systems/src/: main.rs
text/: Cargo.toml
text/src/: main.rs
web/: Cargo.toml
web/src/: main.rs
