[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "calculate_sha256"

[[bin]]
name = "draw_fractal"

[[bin]]
name = "generate_thumbnails"

[dependencies]
crossbeam = "0.8"
crossbeam-channel = "0.5"
lazy_static = "1.4"
error-chain = "0.7"
threadpool = "1.8"
num_cpus = "1.13"
walkdir = "2"
ring = "0.16"
num = "0.4"
image = "0.23"
rayon = "1.5"
rand = "0.8"
glob = "0.3"