[package]
name = "error_handling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "error_handling"

[[bin]]
name = "handle-errors"

[[bin]]
name = "error-conversions"

[[bin]]
name = "obtain-backtrace"

[dependencies]
error-chain = "0.7"
reqwest = {version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
csv = "1.1"