[package]
name = "systems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "listen-server"

[[bin]]
name = "command-gitlog"

[[bin]]
name = "command-pyinfo"

[[bin]]
name = "command-du"

[[bin]]
name = "redirect"

[[bin]]
name = "continuously-outputs"

[[bin]]
name = "read-envvar"

[dependencies]
num_cpus = "1"
lazy_static = "1.4"
regex = "1"
error-chain = "0.7"