[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "extract-links"

[[bin]]
name = "check-brokenlinks"

[[bin]]
name = "extract-markup-links"

[[bin]]
name = "url-basic"

[[bin]]
name = "base-url"

[[bin]]
name = "new-url"

[[bin]]
name = "extract-url"

[[bin]]
name = "remove-parts"

[[bin]]
name = "mime-string"

[dependencies]
lazy_static = "1.4"
regex = "1"
error-chain = "0.7"
reqwest = {version = "0.11", features = ["blocking"] }
select = "0.5"
url = "2"
mime = "0.3"
serde = { version = "1", features = ["derive"] }
tempdir = "0.3"
tokio = { version = "1.17", features = ["full"] }