[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "extract-links"

[[bin]]
name = "check-brokenlinks"

[[bin]]
name = "extract-markup-links"

[[bin]]
name = "url-basic"

[[bin]]
name = "url-baseurl"

[[bin]]
name = "url-new"

[[bin]]
name = "url-extract"

[[bin]]
name = "url-remove-parts"

[[bin]]
name = "mime-string"

[[bin]]
name = "mime-filename"

[[bin]]
name = "mime-http"

[[bin]]
name = "clients-http-request"

[[bin]]
name = "clients-http-request-async"

[[bin]]
name = "webapi-query"

[[bin]]
name = "webapi-check"

[[bin]]
name = "download-file"

[[bin]]
name = "post-file"

[[bin]]
name = "download-partial"

[[bin]]
name = "basic-auth"

[dependencies]
lazy_static = "1.4"
regex = "1"
error-chain = "0.7"
reqwest = {version = "0.11", features = ["blocking", "json"]}
select = "0.5"
url = "2"
mime = "0.3"
serde = { version = "1", features = ["derive"] }
tempdir = "0.3"
tempfile = "3"
tokio = { version = "1.17", features = ["full"] }